syntax = "proto3";
package acl;

enum Family {
  IP = 0;
  IP6 = 1;
  INET = 2;
  ARP = 3;
  BRIDGE = 4;
  NETDEV = 5;
}

enum Verdict {
  ACCEPT = 0;
  DENY = 1;
}

enum Protocol {
  TCP = 0;
  UDP = 1;
  ICMP = 5;
  ICMPV6 = 6;
}

enum IpVersion {
  IPV4 = 0;
  IPV6 = 1;
}

message IpRange {
  string start = 1;
  string end = 2;
}

message IpAddress {
  IpVersion version = 1;
  oneof address {
    string ip = 2;
    IpRange ip_range = 3;
    string ip_subnet = 4;
  }
}

// wrapper message since `oneof` itself cannot be repeated
message Port {
  oneof port {
    uint32 single_port = 1;
    PortRange port_range = 2;
  }
}

message PortRange {
  uint32 start = 1;
  uint32 end = 2;
}

message FirewallRule {
  Family family = 1;
  optional uint32 index = 2;
  repeated IpAddress source_addr = 3;
  repeated IpAddress destination_addr = 4;
  repeated Port destination_port = 5;
  repeated Protocol protocol = 6;
  Verdict verdict = 7;
  optional string comment = 8;
}
